--- a/mani-project1/index.html
+++ b/mani-project1/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style/main.css">
   <title></title>
+  <style>
+    .mystyle {display: hidden;}
+  </style>
 </head>
 <body>
  <div class="container">
@@ -35,6 +38,8 @@
        extinction are the loss and degradation of habitat (mainly <br>
        deforestation), over exploitation (hunting, overfishing), <br>
        invasive species, climate change, and nitrogen pollution</p>
+       <br>
+       <br>
        <p class="rmore"><a href="#"><span onclick="showUp()">Read More..</span></a></p>
        <div class="hidden">
          <p>
@@ -63,8 +68,43 @@
   </div>  
 
   <div class="main2 main">
-
-
+    <div class="item1">
+    <section>
+      <h1>The Health Factor</h1>
+      <p>Even reducing meat intake has a protective effect.<br>
+         Research shows that people who eat red meat are at an<br>
+          increased risk of death from heart disease, stroke or<br>
+           diabetes. Processed meats also increase the risk of <br>
+           death from these diseases. And what you don't eat can<br>
+            also harm your health</p>
+            <br>
+            <br>
+            <p class="rmore"><a href="#"><span onclick="showText()">Read More..</span></a></p>
+            <div class="invisible">
+              ... 
+            <p> Is it healthy to stop eating meat?<br>
+               Myth. According to the National Institutes<br>
+                of Health, a number of studies over the years<br>
+                 linked red meat with an increased risk of cardio <br>
+                 vascular disease, some cancers, and diabetes. But<br>
+                  other research shows that a low level of consumption <br>
+                  – no more than 2-3 servings per week – is not deter<br>
+                  -mental to your health.</p>
+            </div>
+    </section>
+    
+    </div>
+    <div class="item2">
+      <img src="./images/images.jpg" width="250px" height="250px" alt="sheep">
+      <p>n the lab, researchers found that animals,<br>
+         like chickens and rats, self-administer<br>
+          pain relievers (from special machines set<br>
+           up for tests) when they're hurting. And in<br>
+            general, animals tend to avoid situations <br>
+            in which they've been hurt before —<br>
+             indicating a memory and awareness of <br>
+             previous pain and threats.</p>
+    </div>
 
   </div>
 
@@ -77,13 +117,16 @@
  <div>
  <script>
    function showUp(){
-     var x = document.querySelector(".hidden");
-     if (x.style.display==="none"){
-       x.style.display="block";
-     }else{
-       x.style.display="none";
-     }
+   var element = document.querySelector(".hidden");
+   if(element.style.display==="none") {
+     element.style.display= "block";
+   } else {
+     element.style.display="none";
    }
+    
+   } 
+
+ 
  </script>
 </body>
 </html>
