--- a/mani-project1/index.html
+++ b/mani-project1/index.html
@@ -42,7 +42,7 @@
               >
             </li>
             <li class="tooltip">
-              <a href="#">Sign Up</a>
+              <a href="form.html">Sign Up</a>
               <span class="tooltiptext">
                 join us in taking care of the world</span
               >
@@ -50,7 +50,47 @@
           </ul>
         </div>
       </div>
-
+   <div class="ad">
+        <div class="col1">
+          <a href="https://www.peta.org/international/"
+            ><img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Peta_logo.svg/368px-Peta_logo.svg.png"
+              alt="logo"
+              width="100px"
+              height="100px"
+          /></a>
+        </div>
+        <div class="col2">
+          <a href=""
+            ><img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6cT5So6pre4NXKRuI2MK5Vs8CTzDh7Wghow&usqp=CAU"
+              alt="logo"
+              width="100px"
+              height="100px"
+          /></a>
+        </div>
+        <div class="col3">
+          <a href=""
+            ><img
+              src="https://gumlet.assettype.com/theceo%2Fimport%2F2019%2F09%2FWorld-Animal-Welfare-Day.jpg?w=1200&auto=format%2Ccompress&ogImage=true"
+              alt="logo"
+              width="100px"
+              height="100px"
+          /></a>
+        </div>
+        <div class="col4">
+          <a href="http://bearproject.org/site/show/id/15"
+            ><img
+              src="https://media.4-paws.org/e/5/1/2/e512500484065774e5485bfb46f32d1f7bb04f4c/four_paws_4c.png"
+              alt="logo"
+              width="100px"
+              height="100px"
+          /></a>
+        </div>
+      </div>
+      <br>
+      <br>
+      <br>
 
       <div class="maincover">
         <div class="son1">
@@ -155,75 +195,40 @@
           </div>
         </div>
          <div class="son2">
-            <img src="./images/world.jpg" width="100px" height="100" alt="the world"></img>
+            <img  class="world" src="./images/earth.jpg" width="150px" height="150px" alt="the world"></img>
              <br>
              <br>
              <br>
             
              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="#">Reduce, reuse, and recycle. Cut down on what you throw away. ...</a></li>
+                <li><a href="#">Volunteer. Volunteer for cleanups in your community. ..</a></li>
+                <li><a href="#">Educate. ...</a></li>
+                <li><a href="#">Conserve water. ...</a></li>
+                <li><a href="#">Choose sustainable. ..</a></li>
+                <li><a href="#">Shop wisely. ...</a></li>
+                <li><a href="#">Use long-lasting light bulbs. ..</a></li>
+                <li><a href="#"Plant a tree>Recycle More Often. ...</a></li>
+                <li><a href="#">Reduce/Recycle Paper.</a></li>
+                <li><a href="#">Buy Sustainable Products. ...</a></li>
+                <li><a href="#">Decrease Meat & Dairy Consumption. ...</a></li>
+                <li><a href="#">Only Buy What You Need.</a></li>
+                <li><a href="#">Get outside more often. ..</a></li>
+                <li><a href="#">Get one or more plants for inside your home. ..</a></li>
+                <li><a href="#">Eat less meat. ..</a></li>
+                <li><a href="#">Educate. ...</a></li>
+                <li><a href="#">Shop wisely. ..</a></li>
+                <li><a href="#">Plant a tree.</a></li>
+              
               </ul>
+              <br><br>
+              <img class="tree" src="./images/tree.jpg" alt="tree" width="100px" height="100px" >
           </div>
         </div>
       </div>
       <br />
       <br />
-      <div class="ad">
-        <div class="col1">
-          <a href="https://www.peta.org/international/"
-            ><img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Peta_logo.svg/368px-Peta_logo.svg.png"
-              alt="logo"
-              width="200px"
-              height="200px"
-          /></a>
-        </div>
-        <div class="col2">
-          <a href=""
-            ><img
-              src="https://media.4-paws.org/e/5/1/2/e512500484065774e5485bfb46f32d1f7bb04f4c/four_paws_4c.png"
-              alt="logo"
-              width="200px"
-              height="200px"
-          /></a>
-        </div>
-        <div class="col3">
-          <a href=""
-            ><img
-              src="https://gumlet.assettype.com/theceo%2Fimport%2F2019%2F09%2FWorld-Animal-Welfare-Day.jpg?w=1200&auto=format%2Ccompress&ogImage=true"
-              alt="logo"
-              width="200px"
-              height="200px"
-          /></a>
-        </div>
-        <div class="col4">
-          <a href="http://bearproject.org/site/show/id/15"
-            ><img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6cT5So6pre4NXKRuI2MK5Vs8CTzDh7Wghow&usqp=CAU"
-              alt="logo"
-              width="200px"
-              height="200px"
-          /></a>
-        </div>
-      </div>
+   
     </div>
     <script>
       function showUp() {
