--- a/mani-project1/form.html
+++ b/mani-project1/form.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style/main.css" />
+    <link rel="stylesheet" href="style/form.css" />
     <style>
       body {
         background-color: white;
