--- a/mani-project1/index.html
+++ b/mani-project1/index.html
@@ -90,8 +90,8 @@ is a non-profit assembly of wood scientists, .....</p>
             ><img
               src="https://gumlet.assettype.com/theceo%2Fimport%2F2019%2F09%2FWorld-Animal-Welfare-Day.jpg?w=1200&auto=format%2Ccompress&ogImage=true"
               alt="logo"
-              width="60px"
-              height="60px"
+              width="70px"
+              height="70px"
           /></a>
           <p>Everyday billions of animals are experiencing unbearable cruelty. We tackle the root ...</p>
         </div>
@@ -100,8 +100,8 @@ is a non-profit assembly of wood scientists, .....</p>
             ><img class="clear"
               src="https://media.4-paws.org/e/5/1/2/e512500484065774e5485bfb46f32d1f7bb04f4c/four_paws_4c.png"
               alt="logo"
-              width="60px"
-              height="60px"
+              width="70px"
+              height="70px"
           /></a>
          
         </div>
@@ -279,7 +279,11 @@ is a non-profit assembly of wood scientists, .....</p>
           </ul>
        </div>
        <div class="foot2">
-
+          <div class="item1" style="padding:60px">
+            <img src="./images/ENG.png" width="45px" style="padding-top:30px">
+            <img src="./images/FRA.png" width="45px" style="padding-top:30px">
+            <img src="./images/GER.png" width="45px" style="padding-top:30px">
+          </div>
        </div>
      </div> 
 
