form style updated

--- a/mani-project1/form.html
+++ b/mani-project1/form.html
@@ -11,9 +11,14 @@
     </style>
     <title></title>
   </head>
-  <body>
-    <form method="post" action="fieldset.html" class="signup">
-      <fieldset>
+  <body style="background-color: #711515; color: white">
+    <form
+      method="post"
+      action="fieldset.html"
+      class="signup"
+      style="background-color: #711515"
+    >
+      <fieldset style="background-color: #711515">
         <legend>personal information</legend>
         <p>
           <label for="firstname">First Name :</label>
@@ -32,7 +37,7 @@
           <input type="password" name="password" id="password" class="text" />
         </p>
       </fieldset>
-      <fieldset>
+      <fieldset style="background-color: #711515">
         <legend>Address Details</legend>
         <p>
           <label for="address1">Address line one : </label>
