--- a/mani-project1/index.html
+++ b/mani-project1/index.html
@@ -284,7 +284,9 @@ is a non-profit assembly of wood scientists, .....</p>
             <img src="./images/FRA.png" width="45px" style="padding-top:30px">
             <img src="./images/GER.png" width="45px" style="padding-top:30px">
           </div>
-       </div>
+          <div class="item2"></div>
+       </div >
+        <div style="padding-left:30px;"><p>this page is made with <i class="fa fa-heart" style="font-size:24px; color:red"></i> <i>by Mani Shidfar.</i></p></div>
      </div> 
 
         
