--- a/mani-project1/form.html
+++ b/mani-project1/form.html
@@ -11,14 +11,14 @@
     </style>
     <title></title>
   </head>
-  <body style="background-color: #711515; color: white">
+  <body style="background-color: white; color: black">
     <form
       method="post"
       action="fieldset.html"
       class="signup"
-      style="background-color: #711515"
+      style="background-color: white"
     >
-      <fieldset style="background-color: #711515">
+      <fieldset style="background-color: white">
         <legend>personal information</legend>
         <p>
           <label for="firstname">First Name :</label>
@@ -37,7 +37,7 @@
           <input type="password" name="password" id="password" class="text" />
         </p>
       </fieldset>
-      <fieldset style="background-color: #711515">
+      <fieldset style="background-color: white">
         <legend>Address Details</legend>
         <p>
           <label for="address1">Address line one : </label>
